# spacebadgers

./: .all-contributorsrc  .editorconfig  .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  deny.toml
.github/: FUNDING.yml
.github/workflows/: dependencies.yml  spacebadgers.yml  utils.yml  worker.yml
badgers/: Cargo.toml  README.md  build.rs
badgers-cli/: Cargo.toml
badgers-cli/src/: main.rs
badgers-utils/: Cargo.toml
badgers-utils/benches/: minify.rs
badgers-utils/src/: lib.rs  minify.rs
badgers-web/: .gitignore  biome.json  cloudflare-env.d.ts  next.config.js  package.json  tailwind.config.js  tsconfig.json  wrangler.jsonc
badgers-web/src/app/: Badge.tsx  layout.tsx  page.tsx
badgers-web/src/app/badge/[...params]/: route.ts
badgers-web/src/app/codeberg/closed-issues/[owner]/[repo]/: route.ts
badgers-web/src/app/codeberg/issues/[owner]/[repo]/: route.ts
badgers-web/src/app/codeberg/open-issues/[owner]/[repo]/: route.ts
badgers-web/src/app/codeberg/release/[owner]/[repo]/: route.ts
badgers-web/src/app/codeberg/stars/[owner]/[repo]/: route.ts
badgers-web/src/app/crates/downloads/[crate]/: route.ts
badgers-web/src/app/crates/downloads/[crate]/latest/: route.ts
badgers-web/src/app/crates/info/[crate]/: route.ts
badgers-web/src/app/crates/name/[crate]/: route.ts
badgers-web/src/app/crates/version/[crate]/: route.ts
badgers-web/src/app/github/activity/[owner]/[repo]/: route.ts
badgers-web/src/app/github/checks/[owner]/[repo]/: route.ts
badgers-web/src/app/github/checks/[owner]/[repo]/[branch]/: route.ts
badgers-web/src/app/github/checks/[owner]/[repo]/[branch]/[check]/: route.ts
badgers-web/src/app/github/closed-issues/[owner]/[repo]/: route.ts
badgers-web/src/app/github/contributors/[owner]/[repo]/: route.ts
badgers-web/src/app/github/issues/[owner]/[repo]/: route.ts
badgers-web/src/app/github/license/[owner]/[repo]/: route.ts
badgers-web/src/app/github/open-issues/[owner]/[repo]/: route.ts
badgers-web/src/app/github/release/[owner]/[repo]/: route.ts
badgers-web/src/app/gitlab/license/[owner]/[repo]/: route.ts
badgers-web/src/app/gitlab/release/[owner]/[repo]/: route.ts
badgers-web/src/app/icons/: IconShelf.tsx  IconUrlBanner.tsx  page.tsx
badgers-web/src/app/npm/license/[org_or_pkg]/: route.ts
badgers-web/src/app/npm/license/[org_or_pkg]/[pkg]/: route.ts
badgers-web/src/app/npm/name/[org_or_pkg]/: route.ts
badgers-web/src/app/npm/name/[org_or_pkg]/[pkg]/: route.ts
badgers-web/src/app/npm/types/[org_or_pkg]/: route.ts
badgers-web/src/app/npm/types/[org_or_pkg]/[pkg]/: route.ts
badgers-web/src/app/npm/version/[org_or_pkg]/: route.ts
badgers-web/src/app/npm/version/[org_or_pkg]/[pkg]/: route.ts
badgers-web/src/app/pypi/info/[pkg]/: route.ts
badgers-web/src/app/pypi/license/[pkg]/: route.ts
badgers-web/src/app/pypi/name/[pkg]/: route.ts
badgers-web/src/app/pypi/version/[pkg]/: route.ts
badgers-web/src/components/: Badge.tsx  BadgeEndpoint.tsx  Path.tsx  Section.tsx  StaticBadge.tsx  ThemeStrip.tsx  index.ts
badgers-web/src/utils/: Badge.ts  BadgeUtil.ts  Codeberg.ts  Crates.ts  CratesUtil.ts  GitHub.ts  GitHubUtil.ts  GitLab.ts  Npm.ts  NpmUtil.ts  PyPI.ts  index.ts
badgers-worker/: Cargo.toml  package-lock.json  package.json  wrangler.toml
badgers-worker/src/: icon.rs  lib.rs
badgers/benches/: badge.rs  minify.rs
badgers/src/: badge.rs  badge_builder.rs  color_palette.rs  icons.rs  lib.rs  minify.rs  util.rs  width.rs
badgers/src/icons/: cssgg_icons.rs  eva_icons_fill.rs  eva_icons_outline.rs  feather_icons.rs  icon_set.rs
badgers/src/snapshots/: badgers__badge__tests__colored_badge.snap  badgers__badge__tests__colored_scaled_badge.snap  badgers__badge__tests__default_badge.snap  badgers__badge__tests__default_scaled_badge.snap  badgers__badge__tests__icon_badge.snap  spacebadgers__badge__tests__colored_badge.snap  spacebadgers__badge__tests__colored_scaled_badge.snap  spacebadgers__badge__tests__default_badge.snap  spacebadgers__badge__tests__default_scaled_badge.snap  spacebadgers__badge__tests__icon_badge.snap  spacebadgers__badge__tests__rounded_badge.snap
tools/: verdana110.js
tools/data/: verdana110.json
