[workspace]
members = [
    "badgers",
    "badgers-cli",
    "badgers-worker"
]

[workspace.package]
license = "MIT"
repository = "https://github.com/splittydev/badgers"
homepage = "https://github.com/splittydev/badgers"
authors = ["Marco Quinten <splittydev@gmail.com>"]

[workspace.dependencies]
spacebadgers = { path = "badgers" }

[profile.release.package.badgers-worker]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
