[workspace]
members = [
    "badgers",
    "badgers-cli",
    "badgers-utils",
    "badgers-worker"
]

[workspace.package]
license = "MIT"
repository = "https://github.com/splittydev/spacebadgers"
homepage = "https://github.com/splittydev/spacebadgers"
authors = ["Marco Quinten <splittydev@gmail.com>"]

[workspace.dependencies]
spacebadgers = { path = "badgers" }
badgers-utils = { path = "badgers-utils" }

[profile.release.package.badgers-worker]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
