[package]
name = "badgers-cli"
version = "0.2.0"
edition = "2021"
description = "Command-line SVG badge generation"

license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }

[dependencies.spacebadgers]
workspace = true
