[package]
name = "badgers-worker"
version = "1.4.2"
edition = "2021"
description = "Spacebadgers worker"

authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
urlencoding = "2.1"
base64 = "0.22"
worker = "0.5.0"
cfg-if = "1"
serde = "1"
serde_json = "1"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1", optional = true }

[dependencies.spacebadgers]
workspace = true
features = ["serde"]
