[package]
name = "spacebadgers"
version = "1.3.0"
edition = "2021"
description = "Fast SVG badge generator"
build = "build.rs"

license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[features]
serde = ["dep:serde", "phf/serde"]

[dependencies]
htmlize = "1.0.2"
indoc = "2.0.1"
once_cell = "1.17.1"
phf = { version = "0.11.1", features = ["macros"] }
serde = { version = "1", features = ["derive"], optional = true }

[dependencies.regex]
version = "1.8.2"
default-features = false
features = ["std", "perf", "unicode-perl"]

[dev-dependencies]
criterion = { version = "0.5.0", features = ["html_reports"] }
insta = "1.29.0"

[build-dependencies]
walkdir = "2"
indoc = "2.0.1"
once_cell = "1.17.1"
regex = { version = "1.8.2", default-features = false, features = ["std", "perf", "unicode-perl"] }

[[bench]]
name = "minify"
harness = false

[[bench]]
name = "badge"
harness = false
