[package]
name = "spacebadgers"
version = "1.3.3"
edition = "2021"
description = "Fast SVG badge generator"
build = "build.rs"

license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true

[features]
serde = ["dep:serde", "phf/serde"]

[dependencies]
htmlize = "1.0"
indoc = "2.0"
phf = { version = "0.11", features = ["macros"] }
serde = { version = "1", features = ["derive"], optional = true }
spacebadgers-utils.workspace = true

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
insta = "1.38"

[build-dependencies]
walkdir = "2.5"
indoc = "2.0"
spacebadgers-utils.workspace = true

[[bench]]
name = "badge"
harness = false
